# Vivace

./: .gitmodules  README.md  meson.build  meson_options.txt
headers/vivace/: iterator.hpp  math.hpp  meta.hpp  option.hpp  result.hpp  utility.hpp
headers/vivace/iterator/: chain.hpp  enumerate.hpp  filter.hpp  filter_map.hpp  map.hpp  reverse.hpp  skip.hpp  skip_while.hpp  take.hpp  take_while.hpp  zip.hpp
sources/: iterator.cpp  utility.cpp
tests/: iterator.cpp  math.cpp  meta.cpp  option.cpp  result.cpp  utility.cpp
